Back to Java 1.8